--- a/backend/package.json
+++ b/backend/package.json
@@ -2,18 +2,23 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "inngest": "^3.40.2",
     "mongoose": "^8.16.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
